--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.css
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.css
@@ -27,53 +27,33 @@
 form .form-actions{
   border-top: 0;
 }
-input#file {
+
+/* input#file {
   padding: 5px 10px;
   background: #E9EAEC;
-}
+} */
 .upload {
   margin: 0;
-}
-.row.upload .col-md-2, .row.upload .col-md-10 {
-  padding: 0;
-}
-
-.row.upload {
   box-sizing: border-box;
   padding: 10px;
+  background: #f5f7fa;
+  border-radius: 5px;
 }
+
+table#table_sp {
+  background: #404747;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+div.col-upload button.btnUpload {
+  margin-bottom: 0;
+}
+
+th, td {
+  color: #fff;
+}
+
 .px-3 {
   padding: 0 !important;
-}
-div.progress.hide {
-  visibility: hidden;
-  opacity:0;
-  transition:2s;
-}
-div.progress.show {
-  visibility: visible;
-  opacity:1;
-  transition:0.5s;
-}
-.form-control {
-  display : block;
-  /* width: 50%; */
-  padding : 0.375rem 0.75rem;
-  font-size : 1rem;
-  line-height : 1.5;
-  color : #495057;
-  background-color : #FFFFFF;
-  -webkit-background-clip : padding-box;
-  background-clip : padding-box;
-  border : 1px solid #CED4DA;
-  border-radius : 0.25rem;
-  -webkit-transition : border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition : border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  -o-transition : border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  -moz-transition : border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition : border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition : border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-}
-textarea#projectinput8 {
-  width: 100%;
 }
