--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -113,28 +113,23 @@
                   <h4 class="form-section">
                     <i class="ft-info"></i> Hình ảnh</h4>
 
-                  <div class="row upload">
-
-                    <div class="col-md-10">
-                      <div *ngIf="currentFileUpload" class="progress" [ngClass]="progress.percentage != 100 ? 'show' : 'hide' ">
-                        <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" attr.aria-valuenow="{{progress.percentage}}"
-                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{width:progress.percentage+'%'}">
-                          {{progress.percentage}}%</div>
+                  <div class="upload">
+                    <div class="row">
+                      <div class="col-md-12" *ngIf="currentUpload">
+                        <div class="progress">
+                          <div class="progress-bar progress-bar-animated" [ngStyle]="{ 'width': currentUpload?.progress + '%' }"></div>
+                        </div>
+                        Progress: {{currentUpload?.name}} | {{currentUpload?.progress}}% Completed
                       </div>
-                      <label class="btn btn-default">
-                        <input type="file" (change)="selectFile($event)">
-                      </label>
                     </div>
-
-                    <div class="col-md-2">
-                      <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">Upload</button>
-                    </div>
-
-                  </div>
-
-                  <div class="row list-upload">
-                    <div class="col-md-12 review">
-                      <!-- <img src="{{listFile[0].name}}"> -->
+                    <div class="row">
+                      <div class="col-md-12 col-upload">
+                        <label>
+                          <input type="file" (change)="detectFiles($event)" multiple>
+                        </label>
+                        <button class="btn btn-outline-success btnUpload" [disabled]="!selectedFiles" (click)="uploadMulti()">Upload</button>
+                        <button (click)="getListImg()">download</button>
+                      </div>
                     </div>
                   </div>
 
