update page chitietsp -- continue

--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -11,11 +11,11 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-block">
-                              <!-- <div class="mb-3"> 
+                              <div class="mb-3"> 
                               <a  class="btn btn-raised gradient-pomegranate white"[routerLink]= "['/chitiet-sp']">
                                           Thêm sản phẩm 
                                       </a> 
-                                  </div> -->
+                                  </div>
                             <table id="table_sp" class="table table-responsive-md-md text-center">
                                 <thead>
                                     <tr>
@@ -43,13 +43,12 @@
                                           routerLink="/sanpham/{{sp.id}}">
                                                 <i class="ft-list font-medium-3 mr-2"></i>
                                             </a>
-                                            <a class="info p-0" data-original-title="" title="Thêm mới" [routerLink]= "['/chitiet-sp']">
+                                            <!-- <a class="info p-0" data-original-title="" title="Thêm mới" [routerLink]= "['/chitiet-sp']">
                                                 <i class="ft-plus-square"></i>
-                                            </a>
+                                            </a> -->
                                             <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
                                                 <i class="ft-x font-medium-3 mr-2"></i>
                                             </a>
-                                            <!-- <button type="button" class="btn btn-primary btn-raised btn-block" id="confirm-cancel" >Buttons Actions</button> -->
                                         </td>
                                     </tr>
                                 </tbody>
