--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -20,27 +20,29 @@
           <div class="card-body">
             <div class="px-3">
               <!-- *ngIf="chitietSp != null" -->
-              <form class="form">
+              <form class="form" method="post" [formGroup]="chitietSanpham" (ngSubmit)="saveSanpham()">
                 <div class="form-body">
-                  <h4 class="form-section">
-                    <i class="ft-user"></i> Mã sản phẩm: {{ chitietSp.id }}</h4>
+                  <h4 class="form-section" formControlName="idSp">
+                    <i class="ft-user"></i>
+                    Mã sản phẩm: {{ chitietSp.id }}
+                  </h4>
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
                         <label for="userinput1">TÊN SẢN PHẨM</label>
-                        <input type="text" value="{{chitietSp.tenSanPham}}" id="userinput1" class="form-control border-primary" name="name">
+                        <input type="text" formControlName="tenSanPham" value="{{chitietSp.tenSanPham}}" id="userinput1" class="form-control border-primary"
+                          name="name">
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
                         <label for="userinput2">Loại giày</label>
-                        <!-- <input type="text" value="{{chitietSp.loaiGiay.tenLoai}}"
-                         id="userinput2" class="form-control border-primary" name="company"> -->
-                        <select  id="issueinput5" name="priority" class="form-control" data-toggle="tooltip" data-trigger="hover" data-placement="top"
-                          data-title="Priority">
-                          <option value="0" selected="">Select</option>
-                          <option *ngFor="let giay of listgiay" 
-                          value="">{{giay.tenLoai}}</option>
+                        <select id="issueinput5" [compareWith]="compareLoaiGiay" (change)="getNewLG($event)" [ngModel]="loaiGiayAA.tenLoai" name="priority" class="form-control" data-toggle="tooltip" data-trigger="hover"
+                          data-placement="top" data-title="Priority" [ngModelOptions]="{standalone: true}">
+                          <option value="none">---Select---</option>
+                          <option *ngFor="let giay of listgiay" [value]="giay.tenLoai">
+                            {{giay.tenLoai}}
+                          </option>
                         </select>
                       </div>
                     </div>
@@ -49,13 +51,15 @@
                     <div class="col-md-6">
                       <div class="form-group">
                         <label for="userinput3">Đơn giá</label>
-                        <input type="text" value="{{chitietSp.donGia}}" id="userinput3" class="form-control border-primary" name="username">
+                        <input type="text" formControlName="donGia" value="{{chitietSp.donGia}}" id="userinput3" class="form-control border-primary"
+                          name="username">
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
                         <label for="userinput4">Chiết khấu</label>
-                        <input type="text" value="{{chitietSp.chietKhau}}" id="userinput4" class="form-control border-primary" name="nickname">
+                        <input type="text" formControlName="chietKhau" value="{{chitietSp.chietKhau}}" id="userinput4" class="form-control border-primary"
+                          name="nickname">
                       </div>
                     </div>
                   </div>
@@ -75,7 +79,7 @@
                     <div class="col-md-12">
                       <div class="form-group">
                         <label for="projectinput8">Chi tiết</label>
-                        <textarea id="projectinput8" rows="5" class="form-control1" name="comment"> {{chitietSp.chiTiet}}</textarea>
+                        <textarea formControlName="chiTiet" id="projectinput8" rows="5" class="form-control" name="comment" value="{{chitietSp.chiTiet}}"></textarea>
                       </div>
                     </div>
                   </div>
@@ -83,10 +87,10 @@
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-actions text-center">
-                        <button type="button" class="btn btn-raised btn-raised btn-warning" routerLink="/sanpham">
+                        <button type="button" class="btn btn-raised btn-raised btn-warning" routerLink="/sanpham" *ngIf="chitietSp != null">
                           <i class="ft-corner-up-left"></i> Quay lại
                         </button>
-                        <button type="button" class="btn btn-raised btn-raised btn-primary">
+                        <button type="submit" class="btn btn-raised btn-raised btn-primary">
                           <i class="fa fa-check-square-o"></i> Lưu
                         </button>
                       </div>
@@ -103,7 +107,7 @@
 
 
 
-      <div class="col-md-6">
+      <div class="col-md-6" *ngIf="chitietSp != null">
         <div class="card">
           <div class="card-body">
             <div class="px-3">
