Delete nhanvien, Loaigiay,Sanpham

--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -91,7 +91,7 @@
                           <i class="ft-corner-up-left"></i> Quay lại
                         </button>
                         <button type="submit" class="btn btn-raised btn-raised btn-primary">
-                          <i class="fa fa-check-square-o"></i> Lưu
+                          <i class="ft-save"></i> Lưu
                         </button>
                       </div>
                     </div>
