--- a/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.css
+++ b/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.css
@@ -1,7 +1,7 @@
 .modal1 {
     width: 500px;
     height: 316px;
-    background: #4bf1f3;
+    background: #dcdcdc;
     text-align: center;
     position: absolute;
     top: 50%;
