--- a/ShoesAdmin/src/app/components/form-user/form-user.component.html
+++ b/ShoesAdmin/src/app/components/form-user/form-user.component.html
@@ -104,7 +104,7 @@
                                         <i class="ft-corner-up-left"></i> Quay lại
                                     </button>
                                     <button type="submit" class="btn btn-raised btn-primary">
-                                        <i class="fa fa-check-square-o"></i> Lưu
+                                        <i class="ft-user-check"></i> Lưu
                                     </button>
                                 </div>
                             </form>
