--- a/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
+++ b/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
@@ -9,8 +9,11 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
+                    
                     <div class="card-body">
                         <div class="card-block">
+                                <button id="addRow" class="btn btn-primary mb-2" (click)="showModal(giay.id)" >
+                                    <i class="ft-user-plus"></i>&nbsp; Thêm mới</button>
                             <div class="mb-3">
                             </div>
                             <table id="table_sp" class="table table-responsive-md-md text-center">
@@ -29,9 +32,9 @@
                                             <a class="success p-0" data-original-title="" title="Cập nhật" data-toggle="modal" (click)="showModal(giay.id)">
                                                 <i class="ft-edit-2 font-medium-3 mr-2"></i>
                                             </a>
-                                            <a class="info p-0" data-original-title="" title="Thêm mới" data-toggle="modal" (click)="showModal(giay.id)">
+                                            <!-- <a class="info p-0" data-original-title="" title="Thêm mới" data-toggle="modal" (click)="showModal(giay.id)">
                                                 <i class="ft-plus-square"></i>
-                                            </a>
+                                            </a> -->
                                             <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
                                                 <i class="ft-x font-medium-3 mr-2"></i>
                                             </a>
@@ -60,11 +63,11 @@
             <div>
                 <label class="title">Mã giày: </label>
                 <div class="form-group">
-                    <input formControlName="id_Giay" type="text" class="form-control">
+                    <input formControlName="id_Giay"  value="{{ChitietLoaigiay.id}}" type="text" class="form-control">
                 </div>
                 <label class="title">Loại giày: </label>
                 <div class="form-group">
-                    <input formControlName="ten_Giay" type="text" class="form-control">
+                    <input formControlName="ten_Giay" value="{{ChitietLoaigiay.tenLoai}}" type="text" class="form-control">
                 </div>
             </div>
             <div class="row">
