Edit modal confirm

--- a/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.css
+++ b/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.css
@@ -1,12 +1,11 @@
 .modal1 {
     width: 500px;
     height: 316px;
-    background: #dcdcdc;
-    text-align: center;
-    position: absolute;
+    background: #fff;
+    position: relative;
     top: 50%;
     left: 50%;
-    margin-top: -153px;
+    margin-top: -385px;
     margin-left: -250px;
     visibility: hidden;
     opacity: 0;
@@ -16,16 +15,19 @@
     box-sizing: border-box;
     padding: 10px;
     border-radius: 5px;
-    box-shadow: 7px 5px 11px 2px #ccc;
+    
 }
 
 .modal1.show, .modal-wrapper.show{
+    display: block;
     visibility: visible;
-    opacity: 1;
+    opacity: 2;
     transition: 0.4s;
 }
 .modal-wrapper.show{
     opacity: 0.2;
+    background-color: rgb(0,0,0); /* Fallback color */
+    
 }
 html, body, .modal-wrapper{
     width: 100%;
@@ -60,6 +62,7 @@ label.title {
     font-size: 14px;
     text-transform: uppercase;
     color: #000;
+    margin-left: 51px;
 }
 button.close:focus {
     outline: 0;
@@ -67,3 +70,6 @@ button.close:focus {
 a.info.p-0 {
     font-size: 20px;
   }
+
+
+  
