--- a/ShoesAdmin/src/app/components/form-user/form-user.component.html
+++ b/ShoesAdmin/src/app/components/form-user/form-user.component.html
@@ -103,9 +103,12 @@
                                     <button type="button" class="btn btn-raised btn-warning mr-1" routerLink="/nhanvien">
                                         <i class="ft-corner-up-left"></i> Quay lại
                                     </button>
-                                    <button type="submit" class="btn btn-raised btn-primary">
+                                    <button type="button" (click)="showModal()" class="btn btn-raised btn-primary">
                                         <i class="ft-user-check"></i> Lưu
                                     </button>
+                                    <!-- <button type="submit" class="btn btn-raised btn-primary">
+                                        <i class="ft-user-check"></i> Lưu
+                                    </button> -->
                                 </div>
                             </form>
 
@@ -117,9 +120,28 @@
         </div>
     </section>
 
-    <!-- <div>
-    <select *ngFor="let giay of ListGiay">
-        <option value="{{giay.id === chitietsp.loaiGiay.tenLoai ? 'selected' : ''}}">{{giay.tenLoai}}</option>
-    </select>
-    </div> -->
+   <!-- MODAL -->
+    <div class="modal-wrapper" (click)="removeModal()"></div>
+
+    <div class="modal1">
+        <div class="modal-header">
+            <label class="modal-title text-text-bold-600 title">Confirm</label>
+            <!-- <h3 class="modal-title">Confirm</h3> -->
+            <button (click)="removeModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">Are you sure you want to save?</div>
+            <div  class="modal-footer">
+                <div class="col-md-12 text-center">
+                    <button type="submit" class="btn btn-raised btn-success but1">
+                        <i class=""></i> OK
+                    </button>
+                    <button type="submit" class="btn btn-raised btn-warning but1">
+                        <i class=""></i> Cancel
+                    </button>
+                </div>
+            </div>
+    </div>
+    <!-- MODAL -->
 </div>
