--- a/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
+++ b/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
@@ -9,11 +9,11 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
-                    
+
                     <div class="card-body">
                         <div class="card-block">
-                                <button id="addRow" class="btn btn-primary mb-2" (click)="showModal(giay.id)" >
-                                    <i class="ft-user-plus"></i>&nbsp; Thêm mới</button>
+                            <button id="addRow" class="btn btn-primary mb-2" (click)="showModal(giay.id)">
+                                <i class="ft-user-plus"></i>&nbsp; Thêm mới</button>
                             <div class="mb-3">
                             </div>
                             <table id="table_sp" class="table table-responsive-md-md text-center">
@@ -48,7 +48,6 @@
             </div>
         </div>
     </section>
-
     <!-- MODAL -->
     <div class="modal-wrapper" (click)="removeModal()"></div>
 
@@ -61,19 +60,22 @@
         </div>
         <form method="POST" [formGroup]="Loaigiay" (ngSubmit)="saveLoaigiay()">
             <div>
-                <label class="title">Mã giày: </label>
+                <label class="title">Mã giày</label>
                 <div class="form-group">
                     <input formControlName="id_Giay"  value="{{ChitietLoaigiay.id}}" type="text" class="form-control">
                 </div>
-                <label class="title">Loại giày: </label>
+                <label class="title">Loại giày </label>
                 <div class="form-group">
                     <input formControlName="ten_Giay" value="{{ChitietLoaigiay.tenLoai}}" type="text" class="form-control">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-raised btn-primary but1">
-                        <i class="ft-save"></i> Lưu
+                    <button type="submit" class="btn btn-raised btn-success but1">
+                        <i class=""></i> Save
+                    </button>
+                    <button type="submit" class="btn btn-raised btn-warning but1">
+                        <i class=""></i> Cancel
                     </button>
                 </div>
             </div>
