--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -46,7 +46,7 @@
                                             <!-- <a class="info p-0" data-original-title="" title="Thêm mới" [routerLink]= "['/chitiet-sp']">
                                                 <i class="ft-plus-square"></i>
                                             </a> -->
-                                            <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
+                                            <a class="danger p-0" (click)="showModal()" data-original-title="" title="Xóa" id="confirm-cancel">
                                                 <i class="ft-x font-medium-3 mr-2"></i>
                                             </a>
                                         </td>
@@ -59,4 +59,28 @@
             </div>
         </div>
     </section>
+      <!-- Modal -->
+<div class="modal-wrapper" (click)="removeModal()"></div>
+
+<div class="modal1">
+    <div class="modal-header">
+        <label class="modal-title text-text-bold-600 title">Confirm</label>
+        <!-- <h3 class="modal-title">Confirm</h3> -->
+        <button (click)="removeModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">Are you sure you want to delete?</div>
+        <div  class="modal-footer">
+            <div class="col-md-12 text-center">
+                <button type="submit" class="btn btn-raised btn-success but1">
+                    <i class=""></i> OK
+                </button>
+                <button type="submit" class="btn btn-raised btn-warning but1">
+                    <i class=""></i> Cancel
+                </button>
+            </div>
+        </div>
+</div>
+<!-- MODAL -->
   </div>
