--- a/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
+++ b/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="card-body">
                         <div class="card-block">
-                            <table id="table_hd" class="table table-responsive-md-md text-center">
+                            <table id="table_hd" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                                 <thead>
                                     <tr>
                                         <th>Mã Hóa Đơn</th>
@@ -46,7 +46,7 @@
                                             <a class="success p-0" data-original-title="" title="Cập nhật">
                                                 <i class="ft-edit-2 font-medium-3 mr-2"></i>
                                             </a>
-                                            <a *ngIf="hd.trangThai != 'Hoàn thành'"  (click)="DelhoaDon(hd.id)" class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
+                                            <a *ngIf="hd.trangThai != 'Hoàn thành'" (click)="showModal(hd.id)" class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
                                                     <!-- (click)="DelhoaDon(hd.id)" -->
                                                 <i class="ft-x font-medium-3 mr-2"></i>
                                             </a>
@@ -62,4 +62,28 @@
     </section>
     
     <!--Extended Table Ends-->
+     <!-- Modal -->
+<div class="modal-wrapper" (click)="removeModal()"></div>
+
+<div class="modal1">
+    <div class="modal-header">
+        <label class="modal-title text-text-bold-600 title">Confirm</label>
+        <!-- <h3 class="modal-title">Confirm</h3> -->
+        <button (click)="removeModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">Are you sure you want to delete?</div>
+        <div  class="modal-footer">
+            <div class="col-md-12 text-center">
+                <button type="submit" (click)="DelhoaDon()" class="btn btn-raised btn-success but1">
+                    <i class=""></i> OK
+                </button>
+                <button type="submit"  class="btn btn-raised btn-warning but1">
+                    <i class=""></i> Cancel
+                </button>
+            </div>
+        </div>
+</div>
+<!-- MODAL -->
 </div>
