--- a/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
+++ b/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
@@ -11,7 +11,7 @@
             <div class="card-block">
               <!-- <button id="addRow" class="btn btn-primary mb-2">
                 <i class="ft-plus"></i>&nbsp; Thêm mới</button> -->
-              <table id="table_kh" class="table table-responsive-md-md text-center">
+              <table id="table_kh" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                 <thead>
                   <tr>
                     <th>Mã Khách Hàng</th>
