--- a/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.css
+++ b/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.css
@@ -78,3 +78,12 @@ button.close:focus {
 a.info.p-0 {
     font-size: 20px;
   }
+tr.odd {
+    text-align:  center;
+}
+tr.even {
+    text-align:  center;
+}
+tr {
+    text-align:  center;
+}
