--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.css
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.css
@@ -83,3 +83,13 @@ button.close:focus {
 a.info.p-0 {
     font-size: 20px;
   }
+
+tr.odd {
+    text-align:  center;
+}
+tr.even {
+    text-align:  center;
+}
+tr {
+    text-align:  center;
+}
