--- a/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
+++ b/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
@@ -16,7 +16,7 @@
                                 <i class="ft-user-plus"></i>&nbsp; Thêm mới</button>
                             <div class="mb-3">
                             </div>
-                            <table id="table_sp" class="table table-responsive-md-md text-center">
+                            <table id="table_sp" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                                 <thead>
                                     <tr>
                                         <th>Mã Giày</th>
