--- a/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
+++ b/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
@@ -11,7 +11,7 @@
             <div class="card-block">
               <button id="addRow" class="btn btn-primary mb-2" routerLink="/nhanvien/0">
                 <i class="ft-user-plus"></i>&nbsp; Thêm mới</button>
-              <table id="table_nv" class="table table-responsive-md-md text-center">
+              <table id="table_nv" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                 <thead>
                   <tr>
                     <th>Mã Nhân Viên</th>
