--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -16,7 +16,7 @@
                                           Thêm sản phẩm 
                                       </a> 
                                   </div>
-                            <table id="table_sp" class="table table-responsive-md-md text-center">
+                            <table id="table_sp" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                                 <thead>
                                     <tr>
                                         <th>Mã Sản Phẩm</th>
@@ -30,15 +30,15 @@
                                 <tbody>
                                     <tr *ngFor= "let sp of list_sp" >
                                         <td>{{sp.id}}</td>
-                                        <td style="vertical-align: middle">{{sp.tenSanPham}}</td>
-                                        <td style="vertical-align: middle">{{sp.loaiGiay.tenLoai}}</td>
-                                        <td style="vertical-align: middle"><img src="{{sp.hinhSanPham[0].hinh}}" width="100"></td>
-                                        <td style="vertical-align: middle">
+                                        <td >{{sp.tenSanPham}}</td>
+                                        <td >{{sp.loaiGiay.tenLoai}}</td>
+                                        <td ><img src="{{sp.hinhSanPham[0].hinh}}" width="100"></td>
+                                        <td >
                                             <span *ngFor="let size of sp.hangTrongKho">
                                                 {{size.kichThuoc.tenKichThuoc}}
                                                 <span>  </span></span>
                                             </td>
-                                        <td style="vertical-align: middle" routerLinkActive="active">
+                                        <td routerLinkActive="active">
                                             <a class="info p-0" data-original-title="" title="Chi tiết" 
                                           routerLink="/sanpham/{{sp.id}}">
                                                 <i class="ft-list font-medium-3 mr-2"></i>
