--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -90,7 +90,7 @@
                         <button type="button" class="btn btn-raised btn-raised btn-warning" routerLink="/sanpham" *ngIf="chitietSp != null">
                           <i class="ft-corner-up-left"></i> Quay lại
                         </button>
-                        <button type="submit" class="btn btn-raised btn-raised btn-primary">
+                        <button type="submit" (click)="showModal(chitietSp.id)" class="btn btn-raised btn-raised btn-primary">
                           <i class="ft-save"></i> Lưu
                         </button>
                       </div>
@@ -154,7 +154,8 @@
                       </td>
                       <td style="vertical-align: middle">
                         <a class="danger p-0" data-original-title="" title="Xóa" id="confirm-cancel">
-                          <i (click)="delSize(size.kichThuocId)" class="ft-x font-medium-3 mr-2"></i>
+                            <i (click)="showModal()" class="ft-x font-medium-3 mr-2"></i>
+                          <!-- <i (click)="delSize(size.kichThuocId)" class="ft-x font-medium-3 mr-2"></i> -->
                         </a>
                       </td>
                     </tr>
@@ -167,4 +168,52 @@
       </div>
     </div>
   </section>
+  <!-- Modal Save -->
+<div class="modal-wrapper" (click)="removeModal()"></div>
+
+<div class="modal1">
+    <div class="modal-header">
+        <label class="modal-title text-text-bold-600 title">Confirm</label>
+        <!-- <h3 class="modal-title">Confirm</h3> -->
+        <button (click)="removeModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">Are you sure you want to save?</div>
+        <div  class="modal-footer">
+            <div class="col-md-12 text-center">
+                <button type="submit" class="btn btn-raised btn-success but1">
+                    <i class=""></i> OK
+                </button>
+                <button type="button" (click)="removeModal()" class="btn btn-raised btn-warning but1">
+                    <i class=""></i> Cancel
+                </button>
+            </div>
+        </div>
+</div>
+<!-- MODAL -->
+ <!-- Modal Delete -->
+ <div class="modal-wrapper" (click)="removeModal()"></div>
+
+ <div class="modal2">
+     <div class="modal-header">
+         <label class="modal-title text-text-bold-600 title">Confirm</label>
+         <!-- <h3 class="modal-title">Confirm</h3> -->
+         <button (click)="removeModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+             <span aria-hidden="true">&times;</span>
+         </button>
+     </div>
+     <div class="modal-body">Are you sure you want to delete?</div>
+         <div  class="modal-footer">
+             <div class="col-md-12 text-center">
+                 <button type="submit" (click)="saveSanpham()" class="btn btn-raised btn-success but1">
+                     <i class=""></i> OK
+                 </button>
+                 <button type="submit" (click)="removeModal()" class="btn btn-raised btn-warning but1">
+                     <i class=""></i> Cancel
+                 </button>
+             </div>
+         </div>
+ </div>
+ <!-- MODAL -->
 </div>
