--- a/ShoesAdmin/src/app/components/form-user/form-user.component.html
+++ b/ShoesAdmin/src/app/components/form-user/form-user.component.html
@@ -103,12 +103,9 @@
                                     <button type="button" class="btn btn-raised btn-warning mr-1" routerLink="/nhanvien">
                                         <i class="ft-corner-up-left"></i> Quay lại
                                     </button>
-                                    <button type="button" (click)="showModal()" class="btn btn-raised btn-primary">
+                                    <button type="button" (click)="showModal(chitiet_NV.id)" class="btn btn-raised btn-primary">
                                         <i class="ft-user-check"></i> Lưu
                                     </button>
-                                    <!-- <button type="submit" class="btn btn-raised btn-primary">
-                                        <i class="ft-user-check"></i> Lưu
-                                    </button> -->
                                 </div>
                             </form>
 
@@ -134,10 +131,10 @@
         <div class="modal-body">Are you sure you want to save?</div>
             <div  class="modal-footer">
                 <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-raised btn-success but1">
+                    <button type="submit" (click)="saveNhanvien()" class="btn btn-raised btn-success but1">
                         <i class=""></i> OK
                     </button>
-                    <button type="submit" class="btn btn-raised btn-warning but1">
+                    <button type="submit" (click)="removeModal()" class="btn btn-raised btn-warning but1">
                         <i class=""></i> Cancel
                     </button>
                 </div>
