--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -11,11 +11,11 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-block">
-                              <div class="mb-3"> 
-                              <a  class="btn btn-raised gradient-pomegranate white"[routerLink]= "['/chitiet-sp']">
-                                          Thêm sản phẩm 
-                                      </a> 
-                                  </div>
+                            <div class="mb-3">
+                                <a class="btn btn-raised gradient-pomegranate white" [routerLink]="['/chitiet-sp']">
+                                    Thêm sản phẩm
+                                </a>
+                            </div>
                             <table id="table_sp" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                                 <thead>
                                     <tr>
@@ -28,19 +28,21 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor= "let sp of list_sp" >
+                                    <tr *ngFor="let sp of list_sp">
                                         <td>{{sp.id}}</td>
-                                        <td >{{sp.tenSanPham}}</td>
-                                        <td >{{sp.loaiGiay.tenLoai}}</td>
-                                        <td ><img src="{{sp.hinhSanPham[0].hinh}}" width="100"></td>
-                                        <td >
+                                        <td>{{sp.tenSanPham}}</td>
+                                        <td>{{sp.loaiGiay.tenLoai}}</td>
+                                        <td>
+                                            <img src="{{sp.hinhSanPham[0].hinh}}" width="100">
+                                        </td>
+                                        <td>
                                             <span *ngFor="let size of sp.hangTrongKho">
                                                 {{size.kichThuoc.tenKichThuoc}}
-                                                <span>  </span></span>
-                                            </td>
+                                                <span> </span>
+                                            </span>
+                                        </td>
                                         <td routerLinkActive="active">
-                                            <a class="info p-0" data-original-title="" title="Chi tiết" 
-                                          routerLink="/sanpham/{{sp.id}}">
+                                            <a class="info p-0" data-original-title="" title="Chi tiết" routerLink="/sanpham/{{sp.id}}">
                                                 <i class="ft-list font-medium-3 mr-2"></i>
                                             </a>
                                             <!-- <a class="info p-0" data-original-title="" title="Thêm mới" [routerLink]= "['/chitiet-sp']">
@@ -59,28 +61,30 @@
             </div>
         </div>
     </section>
-      <!-- Modal -->
-<div class="modal-wrapper" (click)="removeModal()"></div>
 
-<div class="modal1">
-    <div class="modal-header">
-        <label class="modal-title text-text-bold-600 title">Confirm</label>
-        <!-- <h3 class="modal-title">Confirm</h3> -->
-        <button (click)="removeModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="modal-body">Are you sure you want to delete?</div>
-        <div  class="modal-footer">
+
+    <!-- Modal -->
+    <div class="modal-wrapper" (click)="removeModal()"></div>
+
+    <div class="modal1">
+        <div class="modal-header">
+            <label class="modal-title text-text-bold-600 title">Confirm</label>
+            <!-- <h3 class="modal-title">Confirm</h3> -->
+            <button (click)="removeModal()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">Are you sure you want to delete?</div>
+        <div class="modal-footer">
             <div class="col-md-12 text-center">
                 <button type="submit" class="btn btn-raised btn-success but1">
                     <i class=""></i> OK
                 </button>
-                <button type="submit" class="btn btn-raised btn-warning but1">
+                <button type="submit" (click)="removeModal()" class="btn btn-raised btn-warning but1">
                     <i class=""></i> Cancel
                 </button>
             </div>
         </div>
+    </div>
+    <!-- MODAL -->
 </div>
-<!-- MODAL -->
-  </div>
